--- a/xuecheng-plus-learning/xuecheng-plus-learning-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-learning/xuecheng-plus-learning-api/src/main/resources/bootstrap.yml
@@ -28,6 +28,9 @@ spring:
           - data-id: feign-${spring.profiles.active}.yaml
             group: xuecheng-plus-common
             refresh: true
+          - data-id: rabbitmq-${spring.profiles.active}.yaml
+            group: xuecheng-plus-common
+            refresh: true
   main:
     allow-bean-definition-overriding: true
   profiles:
