--- a/xuecheng-plus-orders/xuecheng-plus-orders-service/src/test/resources/bootstrap.yml
+++ b/xuecheng-plus-orders/xuecheng-plus-orders-service/src/test/resources/bootstrap.yml
@@ -3,12 +3,12 @@ spring:
     name: orders-service
   cloud:
     nacos:
-      server-addr: 192.168.101.65:8848
+      server-addr: 192.168.128.1:8848
       discovery:
-        namespace: ${spring.profiles.active}
+        namespace: 54a51513-52f2-4d52-b774-caba911f8f39
         group: xuecheng-plus-project
       config:
-        namespace: ${spring.profiles.active}
+        namespace: 54a51513-52f2-4d52-b774-caba911f8f39
         group: xuecheng-plus-project
         file-extension: yaml
         refresh-enabled: true
